--- a/reports/index.html
+++ b/reports/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="./unit//report.html">unit report</a>
+    <a href="./unit/report.html">unit report</a>
     <hr />
     <a href=".loki/report.html">screen report</a>
 </body>
